@@ -52,6 +52,7 @@ FILES =  \
 	MonoDevelop.Core/FileEventArgs.cs \
 	MonoDevelop.Core/FileService.cs \
 	MonoDevelop.Core/IAsyncOperation.cs \
+	MonoDevelop.Core/ICustomXmlSerializer.cs \
 	MonoDevelop.Core/ILoggingService.cs \
 	MonoDevelop.Core/IProgressMonitor.cs \
 	MonoDevelop.Core/IService.cs \
