@@ -83,6 +83,7 @@
     <File name="./MonoDevelop.Core/PropertyChangedEventArgs.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/PropertyService.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Core/XmlReadHelper.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Core/ICustomXmlSerializer.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
